<resources>
    <string name="app_name">Receipt Stacker</string>
    <string name="title_options">Settings</string>
    <string name="title_gstcalc">GST Calc</string>
    <string name="title_browse">Browse</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="cameraInput">Camera Input</string>
    <string name="capButton">capture</string>
    <string name="optionbutton">Options</string>
    <string name="title_scan">Scan</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_summary_enabled">Enabled</string>
    <string name="pref_summary_disabled">Disabled</string>

    <!-- Strings related to Scan Settings-->

    <string name="pref_header_scanSettings">Scan Settings</string>
    <string name="pref_dark_mode_title">Night Mode Switch (To be implemented)</string>
    <string name="pref_title_toggle_duplicate_readings">Record Redundancy Prevention</string>
    <string name="pref_description_toggle_duplicate_readings">(To be implemented) Prevents Receipt Stacker from recording
        a transaction twice while in multi-capture mode.
    </string>


    <!-- Settings for Personalization -->
    <string name="pref_header_personalization">Personalization</string>

    <string name="pref_title_color_scheme">Color Scheme</string>
    <string-array name="pref_sync_color_scheme_titles">
        <item>Basic Blue</item>
        <item>Bubblegum Pink</item>
        <item>Tempered Titanium</item>
        <item>Crystal Ice</item>
        <item>Gleeful Green</item>
        <item>Ruby Red</item>
        <item>Glimmering Gold</item>
    </string-array>
    <string-array name="pref_color_scheme_values">
        <item>default</item>
        <item>pinkTheme</item>
        <item>titaniumTheme</item>
        <item>crystalTheme</item>
        <item>greenTheme</item>
        <item>redTheme</item>
        <item>goldTheme</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="imageDescription">This is a test.</string>
    <string name="browseName">My Receipts:</string>
    <string name="searchInput" />
    <string name="searchButton" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_custom_dialog">CustomDialog</string>
    <string name="activity_custom_keep">Keep</string>

    <string name="title_activity_picture">My Receipts</string>
    <string name="addInfo">Extra Info</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="purchase_origin">Purchase Origin</string>

    <string name="shutter">shutter btn</string>
    <string name="multicap">multi-cap btn</string>
    <string name="record">recording symbol</string>

    <string name="search">Search</string>
    <string name="details_btn">Details</string>

    <string name="close_btn">Close</string>
    <string name="total_price_h">TOTAL PRICE:</string>
    <string name="purchase_origin_h">PURCHASE ORIGIN:</string>
    <string name="dob_h">DATE OF PURCHASE:</string>
    <string name="image_id_h">IMAGE ID:</string>
    <string name="OCR_h">FULL OCR STRING:</string>
    <string name="image_path_h">IMAGE PATH:</string>

    <string name="new_image">the new image taken</string>

    <string name="price_hint">Price</string>
    <string name="dollar_sign">$</string>
    <string name="image_btn">view image btn</string>


</resources>
