<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_Main"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageview_ReceiptImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:background="@color/colorPrimary"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_PullDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout_Text"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".ImageTakenDialog"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/textView_PurchaseOrgin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/purchase_origin"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textView_DateOfPurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:hint="@string/date"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Tags" />

        <EditText
            android:id="@+id/textView_Tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/description_optional"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_PurchaseOrgin" />

        <EditText
            android:id="@+id/textview_Price"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Price"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Tags" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="$"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textview_Price"
            app:layout_constraintEnd_toStartOf="@+id/textview_Price"
            app:layout_constraintTop_toTopOf="@+id/textview_Price" />

        <Button
            android:id="@+id/button_TryAgain"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_keep"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/activity_custom_keep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton_PullDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_Text"
        app:layout_constraintEnd_toEndOf="@+id/imageview_ReceiptImage"
        app:layout_constraintStart_toStartOf="@+id/imageview_ReceiptImage"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout_Text"
        app:srcCompat="@android:drawable/arrow_down_float" />

</android.support.constraint.ConstraintLayout>
