<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowseFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray1"
        tools:context=".BrowseActivity">

        <EditText
            android:id="@+id/editText"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/silver"
            android:transitionName="@string/searchInput"
            app:layout_constraintEnd_toStartOf="@+id/searchBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Search"
            android:textColor="@color/colorPrimary"

            android:transitionName="@string/searchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_gray1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView0"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="233dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="81dp"
                        android:layout_height="116dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:contentDescription="@string/imageDescription"
                        android:src="@drawable/sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.746"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/selectBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Select"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Delete"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>